chore: update route's name and swagger for sendOTP and verifyOTP handlers
